# kaggle

./: .gitignore  README.md  pyproject.toml
src/: explore_data.ipynb
src/titanic_dataset/: analysys.ipynb  first_attemptive.ipynb
