[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pyright]
typeCheckingMode = "standard"  # https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults
deprecateTypingAliases = true
